--- a/v2/index.html
+++ b/v2/index.html
@@ -78,7 +78,7 @@
 
             <p class="centred"><strong><i>Sections 9 to 20 are for A Level.</i></strong></p>
             <div class="section-flex">
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./9/" class="no-underline section-link">
                         <h1>Section 9</h1>
                         <p>Programming <br /> <em>(in progress)</em></p>
