--- a/v2/11/index.html
+++ b/v2/11/index.html
@@ -28,6 +28,12 @@
                         <p>Number Systems</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./02/" class="no-underline section-link">
+                        <h1>11.02</h1>
+                        <p>Units of Information</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
