--- a/v2/11/index.html
+++ b/v2/11/index.html
@@ -40,6 +40,24 @@
                         <p>Binary Multiplication</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./04/" class="no-underline section-link">
+                        <h1>11.04</h1>
+                        <p>Two's Complement</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>11.05</h1>
+                        <p>Fixed Point Representation</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./06/" class="no-underline section-link">
+                        <h1>11.06</h1>
+                        <p>Floating Point Representation</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
