--- a/v2/11/03/index.html
+++ b/v2/11/03/index.html
@@ -61,7 +61,7 @@
                         &nbsp; 0 1 0 0 1 1 0 0 <br />
                             +  1 0 0 1 1 0 0 0 <br />
                              ----------------- <br />
-                        &nbsp; 1 1 1 1 0 1 1 1 <br />
+                        &nbsp; <b>1 1 1 1 0 1 1 1</b> <br />
                         &nbsp; &nbsp; &nbsp; &nbsp;<sup>1</sup> <sup>1</sup>
                     </code>
                 </li>
