--- a/v2/15/index.html
+++ b/v2/15/index.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="../main.css">
 
-        <title>Section 9 | CS.RN v2</title>
+        <title>Section 15 | CS.RN v2</title>
 
         <link rel="icon" type="image/png" href="../logos/square.png"/>
         <meta property="og:image" content="../logos/square.png" />
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Study Section 9 (Programming) on CS.RN v2, the best place to revise for your A Level Computer Science exam.">
+        <meta name="description" content="Study Section 15 (Data Structures) on CS.RN v2, the best place to revise for your A Level Computer Science exam.">
     </head>
 
     <body>
@@ -24,8 +24,14 @@
             <div class="section-flex">
                 <div class="section-flexbox">
                     <a href="./01/" class="no-underline section-link">
-                        <h1>9.01</h1>
-                        <p>Data Types</p>
+                        <h1>15.01</h1>
+                        <p>Data Structures</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./02/" class="no-underline section-link">
+                        <h1>15.02</h1>
+                        <p>Arrays</p>
                     </a>
                 </div>
             </div>
