--- a/v2/index.html
+++ b/v2/index.html
@@ -114,7 +114,7 @@
                         <p>Communication <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./15/" class="no-underline section-link">
                         <h1>Section 15</h1>
                         <p>Data Structures <br /> <em>(in progress)</em></p>
