--- a/v2/11/index.html
+++ b/v2/11/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Study Section 11 (Data Representation) on CS.RN v2, the best place to revise for your GCSE Computer Science exam.">
+        <meta name="description" content="Study Section 11 (Data Representation) on CS.RN v2, the best place to revise for your A Level Computer Science exam.">
     </head>
 
     <body>
