--- a/v2/11/index.html
+++ b/v2/11/index.html
@@ -70,6 +70,12 @@
                         <p>Images</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./09/" class="no-underline section-link">
+                        <h1>11.09</h1>
+                        <p>Sound</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
