--- a/v2/15/index.html
+++ b/v2/15/index.html
@@ -34,6 +34,18 @@
                         <p>Arrays</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>15.03</h1>
+                        <p>Linear Queues</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./04/" class="no-underline section-link">
+                        <h1>15.04</h1>
+                        <p>Circular Queues</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
