--- a/v2/15/index.html
+++ b/v2/15/index.html
@@ -46,6 +46,18 @@
                         <p>Circular Queues</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>15.05</h1>
+                        <p>Priority Queues</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./06/" class="no-underline section-link">
+                        <h1>15.06</h1>
+                        <p>Stacks</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
