--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -28,6 +28,18 @@
                         <p>Data Types</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./02/" class="no-underline section-link">
+                        <h1>9.02</h1>
+                        <p>Programming Concepts</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>9.03</h1>
+                        <p>Operations</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
