--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -40,6 +40,18 @@
                         <p>Operations</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./04/" class="no-underline section-link">
+                        <h1>9.04</h1>
+                        <p>Random Number Generation</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>9.05</h1>
+                        <p>Exception Handling</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
