--- a/404.html
+++ b/404.html
@@ -25,6 +25,7 @@
             <h2 id="error-404-subtitle">The page you're looking for doesn't exist.</h2>
             <h3 id="error-404-text">Would you like to learn more about errors <a href="/v2/2/14/">on page 2.14</a>?</h3>
         </div>
+        <div id="footer"></div>
 
         <script>let v1 = null;</script>
         <script src="/v2/scripts/version.js"></script>
