--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -52,6 +52,12 @@
                         <p>Exception Handling</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./06/" class="no-underline section-link">
+                        <h1>9.06</h1>
+                        <p>Subroutines</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
