--- a/v2/9/06/index.html
+++ b/v2/9/06/index.html
@@ -122,7 +122,7 @@
                 <strong>Global variables</strong> have a global scope: they can be used anywhere.
             </p>
     
-            <p>Example 5 shows a program with both local and global variables.</p>
+            <p>Example 5 shows a program with both local and global variables. Note: this will not work in C#, but imagine this to be written in a C#-like pseudocode.</p>
     
             <p class="code">
                 <img src="../../icons/code.svg" class="icon" />
