--- a/v2/15/index.html
+++ b/v2/15/index.html
@@ -58,6 +58,18 @@
                         <p>Stacks</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./07/" class="no-underline section-link">
+                        <h1>15.07</h1>
+                        <p>Graphs</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./08/" class="no-underline section-link">
+                        <h1>15.08</h1>
+                        <p>Graph Implementation</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
