--- a/v2/index.html
+++ b/v2/index.html
@@ -138,7 +138,7 @@
                         <p>The Internet <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./19/" class="no-underline section-link">
                         <h1>Section 19</h1>
                         <p>Databases <br /> <em>(in progress)</em></p>
