--- a/v2/15/06/index.html
+++ b/v2/15/06/index.html
@@ -22,6 +22,8 @@
         <div id="header"><a href="/"><img id="logo" alt="CS.RN v2" /></a></div>
         <div id="page">
 
+            <p><i>GCSE Link: None</i></p>
+
             <p class="definition">
                 <img src="../../icons/book.svg" class="icon" />
                 A <strong>stack</strong> is a static abstract data type which stores a sequence of items.
