--- a/v2/15/08/index.html
+++ b/v2/15/08/index.html
@@ -22,6 +22,8 @@
         <div id="header"><a href="/"><img id="logo" alt="CS.RN v2" /></a></div>
         <div id="page">
 
+            <p><i>GCSE Link: None</i></p>
+
             <p>
                 Here's Diagram 1 again from the previous page.
             </p>
