Fix Section 4 index

--- a/v2/4/index.html
+++ b/v2/4/index.html
@@ -85,7 +85,7 @@
                 <div class="section-flexbox">
                     <a href="./11/" class="no-underline section-link">
                         <h1>4.11</h1>
-                        <p>Local/Global Variables</p>
+                        <p>CPU Performance</p>
                     </a>
                 </div>
                 <div class="section-flexbox">
