--- a/v2/index.html
+++ b/v2/index.html
@@ -120,7 +120,7 @@
                         <p>Data Structures <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./16/" class="no-underline section-link">
                         <h1>Section 16</h1>
                         <p>Algorithms <br /> <em>(in progress)</em></p>
