--- a/v2/19/01/index.html
+++ b/v2/19/01/index.html
@@ -50,6 +50,8 @@
                 An entity can be <b>described in terms of its attributes</b>. For example, you could write
                 <code>Book(<u>BookID</u>, Title, DateLoaned, DateDue, MemberID)</code>. Note that <code><u>BookID</u></code>
                 is underlined because it is the <b>entity identifier</b> (<b>primary key</b> of the corresponding table).
+                However, we now learn at A Level that the entity identifier can be a combination of <b>multiple attributes</b>
+                which can uniquely identify each record. In this case, it is called a <b>composite identifier</b>.
             </p>
 
             <p><br />
