--- a/v2/16/01/index.html
+++ b/v2/16/01/index.html
@@ -21,6 +21,7 @@
 
         <div id="header"><a href="/"><img id="logo" alt="CS.RN v2" /></a></div>
         <div id="page">
+            <p><i>GCSE Link: None</i></p>
 
             <p class="definition">
                 <img src="../../icons/book.svg" class="icon" />
