Some small updates

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                     </p>
                 </div>
                 <div id="bottom">
-                    <input type="button" class="q-button" value="Next" id="next-button"> <br />
+                    <!-- <input type="button" class="q-button" value="Next" id="next-button"> <br /> -->
+                    <img class="homepage-arrow no-zoom" id="left-arrow" />
                     <input type="button" class="q-button" value="Explore the index!" id="explore" />
+                    <img class="homepage-arrow no-zoom" id="right-arrow" />
                 </div>
             </div>
         </div>
