--- a/v2/4/07/index.html
+++ b/v2/4/07/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="DESCRIPTION">
+        <meta name="description" content="Learn about the six tasks of the Operating System as part of the Computer Systems topic for GCSE Computer Science on CS.RN v2.">
     </head>
 
     <body>
