--- a/v2/16/index.html
+++ b/v2/16/index.html
@@ -34,6 +34,12 @@
                         <p>Tree Traversal</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>16.03</h1>
+                        <p>Reverse Polish Notation</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
