--- a/v2/19/02/index.html
+++ b/v2/19/02/index.html
@@ -160,6 +160,7 @@
                         <span class="other">Students</span> <br /> <span class="keyword">ON</span>
                         <span class="other">Grades</span>.<span class="string">StudentID</span> =
                         <span class="other">Students</span>.<span class="string">StudentID</span> <br />
+                        <span class="keyword">WHERE</span> <span class="string">Grade</span> &lt; <span class="number">8</span> <br />
                         <span class="keyword">ORDER BY</span> <span class="string">Grade</span> <span class="keyword">DESC</span>
                     </code>
                 </span>
