--- a/v2/11/07/index.html
+++ b/v2/11/07/index.html
@@ -55,7 +55,7 @@
             <p>
                 Usually, one parity bit will be added to the end of a seven-bit sequence to make the <b>total number of
                 1s even</b>. For example, the sequence <code class="string">1000101</code> will have the parity bit
-                <code class="string">1</code> appended to it (because there were 3 zeroes before, and now there are 4).
+                <code class="string">1</code> appended to it (because there were 3 ones before, and now there are 4).
             </p>
 
             <p>
