--- a/v2/15/index.html
+++ b/v2/15/index.html
@@ -88,6 +88,12 @@
                         <p>Hash Tables</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./12/" class="no-underline section-link">
+                        <h1>15.12</h1>
+                        <p>Vectors</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
