Jump to last opened page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
         <div id="header"><a href="/"><img id="logo" alt="CS.RN v2" /></a></div>
         <div id="homepage">
+            <div id="last-page-popup" class="hidden-popup">
+                <a href="/" id="last-page-link" class="no-underline">
+                    <h1>Go to <span id="last-page-title"></span></h1>
+                    <p><i>(Last opened <span id="time-diff"></span>)</i></p>
+                </a>
+                <img src="./v2/icons/circle-close.png" id="close-popup" class="no-zoom" />
+            </div>
             <div id="homepage-carousel">
                 <div class="carousel-item">
                     <h1 class="carousel-header">
