More database stuff

--- a/v2/19/index.html
+++ b/v2/19/index.html
@@ -34,6 +34,12 @@
                         <p>More SQL</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>19.03</h1>
+                        <p>Database Normalisation</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
